--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,99 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-mona-sans: "Mona Sans", sans-serif;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-mona-sans);
+}
+
+body > * {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.productGrid4 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 60px 40px;
+  max-width: 1200px;
+  margin: 60px auto;
+}
+
+.productGrid6 {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 60px 40px;
+  max-width: 1200px;
+  margin: 60px auto;
+}
+
+.gridChanger {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.grid4,
+.grid6 {
+  font-size: 18px;
+}
+
+.product-page {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  margin: 80px auto;
+}
+
+.product-page .product-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.product-page .product-info h1 {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.product-page .product-info .price {
+  font-size: 32px;
+}
+
+.product-info .action-back .back {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.product-page .product-image {
+  margin: auto;
+}
+
+.product-page .product-image img {
+  max-width: 400px;
+}
+
+.btn-primary {
+  background: black;
+  color: white;
+  border: 1px solid black;
+  padding: 12px;
+  margin-top: 12px;
+  width: 100%;
+}
+
+.btn-primary:hover {
+  background: white;
+  color: black;
+}
+
+main {
+  margin-bottom: 200px;
 }
